# pdf-generator

./: .gitignore  .pre-commit-config.yaml  BUILD_FOR_MAC_LINUX.sh  BUILD_FOR_WINDOWS.bat  Makefile  README.md  create_distribution_zip.py  equitas_logic.py  gui_tkinter.py  gui_tkinter.spec  idfc_pdf_generator.py  pdf_generator.spec  pdf_generator_ui.py  pdf_logic.py  pyproject.toml  pytest.ini  release.sh  requirements.txt  web_assets.py
.githooks/: pre-commit
.github/workflows/: build-binaries.yml  build-tkinter.yml  build.yml  release.yml  test-runner.yml  test.yml
hooks/: hook-gi.repository.JavaScriptCore.py  hook-gi.repository.Soup.py  hook-gi.repository.WebKit2.py  hook-numpy.py  patch_numpy.py  runtime_hook_linux.py  runtime_hook_numpy.py
new_files/: audit.py  audit_l2.py
scratch/: color_test.py
scripts/: BUILD_FOR_MAC_LINUX.sh  BUILD_FOR_WINDOWS.bat  create_distribution_zip.py  install-hooks.sh  pre-push  setup-hooks.sh
src/audit_engine/: __init__.py  __main__.py  _version.py  app.py  exceptions.py
src/audit_engine/database/: __init__.py  legacy.py  repos.py
src/audit_engine/domain/: __init__.py  enums.py  models.py
src/audit_engine/services/: __init__.py  arvog.py  base.py  equitas.py  idfc.py
tests/: conftest.py  test_app_smoke.py  test_base_service.py  test_config_models.py  test_detect.py  test_detect_edge_cases.py  test_enums.py  test_equitas_logic.py  test_exceptions.py  test_handlers_validate_run.py  test_idfc_service_comprehensive.py  test_legacy_db.py  test_models.py  test_pdf_logic.py  test_preprocess.py  test_repos.py  test_tracker.py
tests/services/: test_arvog_service.py  test_equitas_service.py  test_idfc_service.py
(+18 files in other folders)
